torder-be/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: torder-be-service
  namespace: torder
spec:
  selector:
    app: torder-be
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
