torder-be/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: torder-be-ingress
  namespace: torder
  annotations:
    kubernetes.io/ingress.class: public
spec:
  rules:
    - host: "torder-be.lilhuy-server.uk"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: torder-be-service
                port:
                  number: 8080
